# lon-mirror

./: BREAK_DRIFT_KERNEL.md  CANONICAL_EVIDENCE.md  CANONICAL_EVIDENCE_20.md  ECOSYSTEM.md  ECOSYSTEM_POSITIONING.md  FORMAL_METRICS.md  INTERFACE.md  OMNIA_EXTERNAL_TEST_PACK_V0.md  OMNIA_MINIMAL_INTERFACE.md  OMNIA_PHASE_4phase_hypothesis_draft.md  OMNIA_PHASE_draft.md  OMNIA_PHASE_reduction_test_draft.md  OMNIA_PHASE_signal_matrix_draft.md  OMNIA_PHASE_signal_vocabulary_draft.md  OMNIA_PHASE_transition_table_draft.md  README.md  README_OMNIA_v1_0.md  RESULTS_GSM_FORMAL_METRICS_V0.md  RESULTS_IRI_VALIDATION_V2.md  RESULTS_JSON_STABILITY_V1.md  RESULTS_OMEGA_HAT_VALIDATION_V0.md  RESULTS_R_VALIDATION_V0.md  RESULTS_SEI_VALIDATION_V0.md  RESULTS_TDELTA_VALIDATION_V0.md  RUN_ALL_CANONICAL_CASES.md  RUN_ALL_CANONICAL_CASES.py  RUN_EXTERNAL_TEST_PACK_V0.md  RUN_OMNIA_NOW.py  START_HERE.md  STATUS_RADAR.md  STATUS_SILENT_FAILURE_GATE.md  TEMPORAL_KERNEL.md  TEMPORAL_KERNEL_V6.md  micro_benchmark_v1  omnia_cas_gate.yml  omnia_mirror_lab.html  omnia_mirror_lab_v3.html  omnia_mirror_minimal.py  omnia_mirror_v2.py  omnia_rfs_core_v1_0.py  (+11 more)
archive/: OMNIA_TOTALE_REPORT_v0.2.md  OMNIA_TOTALE_v0.2.py  OMNIA_v1_0_RFS_structural_measurement.md  README_LOOP.md  README_OMNIA_v1_0.md  README_demo.md
benchmarks/: micro_benchmark_v1.json
data/: LLM_SUPPORT_SET_v0.jsonl  OMNIA_SUPPORT_FALSE_ACCEPT_MINISET_v0.jsonl  OMNIA_SUPPORT_FALSE_ACCEPT_MINISET_v1.jsonl  OMNIA_SUPPORT_FALSE_ACCEPT_REALISH_v0.jsonl  REAL_SUPPORT_SET_TEMPLATE_v0.jsonl  code_gpt4o_zeh2_summary.json  code_zeh2_cases.jsonl  (+19 more)
(+301 files in other folders)
