[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnia-mbx01"
version = "0.0.1"
description = "OMNIA structural measurement engine (MB-X.01)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Massimiliano Brighindi", email = "brighissimo@gmail.com" }]

dependencies = [
  "numpy>=1.24",
]

[tool.setuptools]
packages = ["omnia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"