[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lon-mirror"
version = "0.1.0"
description = "Backbone-compliant root reference observer for the OMNIA ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
include = ["lon_mirror*"]

[tool.ruff]
target-version = "py310"
line-length = 88
